<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kamhi.ex15.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app"
        android:layout_alignParentTop="true"
        android:id="@+id/textView" />

    <Button
        android:text="@string/new_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:id="@+id/newImage"
        android:layout_alignParentStart="true"
        android:onClick="getNewImage"/>

    <Button
        android:text="@string/contact_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactDetails"
        android:layout_marginTop="96dp"
        android:layout_below="@+id/newImage"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/firstName"
        android:layout_toEndOf="@+id/contactDetails"
        android:id="@+id/fillFirstName" />

    <TextView
        android:text="@string/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_marginTop="21dp"
        android:id="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/fillFirstName"
        android:id="@+id/fillLastName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/phone"
        android:layout_toEndOf="@+id/fillLastName"
        android:id="@+id/fillPhone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView15"
        android:layout_alignStart="@+id/fillPhone"
        android:id="@+id/fillAdress" />

    <TextView
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/firstName"
        android:layout_below="@+id/contactDetails"
        android:layout_alignEnd="@+id/contactImage"
        android:layout_marginEnd="45dp" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/phone"
        android:layout_below="@+id/textView11"
        android:layout_alignEnd="@+id/textView11" />

    <TextView
        android:text="@string/adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView15"
        android:layout_below="@+id/phone"
        android:layout_alignEnd="@+id/firstName" />

    <ImageView
        android:src="@mipmap/place_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactImage"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
